--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url(image/clock.png);
+  background: url(https://piyushjoshi.tk/image/clock.png);
   background-size: cover;
 }
 
